[package]
name = "courier"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
# Main wrapper
courier-main-wrapper = { git = "https://github.com/Atomovera/courier-main-wrapper.git" }

# Local dependencies
network = {path = "../network"}
module = {path = "../module"}

libc.workspace = true